tests/ui/traits/vtable/missing-generics-issue-151330.stderr
error[E0107]: missing generics for trait `Supertrait`
  --> $DIR/missing-generics-issue-151330.rs:6:17
   |
LL | trait Trait<P>: Supertrait {}
   |                 ^^^^^^^^^^ expected 1 generic argument
   |
note: trait defined here, with 1 generic parameter: `T`
  --> $DIR/missing-generics-issue-151330.rs:4:7
   |
LL | trait Supertrait<T> {}
   |       ^^^^^^^^^^ -
help: add missing generic argument
   |
LL | trait Trait<P>: Supertrait<T> {}
   |                           +++

error[E0107]: missing generics for trait `Supertrait`
  --> $DIR/missing-generics-issue-151330.rs:6:17
   |
LL | trait Trait<P>: Supertrait {}
   |                 ^^^^^^^^^^ expected 1 generic argument
   |
note: trait defined here, with 1 generic parameter: `T`
  --> $DIR/missing-generics-issue-151330.rs:4:7
   |
LL | trait Supertrait<T> {}
   |       ^^^^^^^^^^ -
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add missing generic argument
   |
LL | trait Trait<P>: Supertrait<T> {}
   |                           +++

error[E0107]: missing generics for trait `Supertrait`
  --> $DIR/missing-generics-issue-151330.rs:6:17
   |
LL | trait Trait<P>: Supertrait {}
   |                 ^^^^^^^^^^ expected 1 generic argument
   |
note: trait defined here, with 1 generic parameter: `T`
  --> $DIR/missing-generics-issue-151330.rs:4:7
   |
LL | trait Supertrait<T> {}
   |       ^^^^^^^^^^ -
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add missing generic argument
   |
LL | trait Trait<P>: Supertrait<T> {}
   |                           +++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0107`.
